<?xml version="1.0" encoding="utf-8"?>
<!-- S24 ULTRA - Psychoacoustic Bass Enhancement Preferences -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <me.timschneeberger.rootlessjamesdsp.preference.SwitchPreferenceGroup
        android:disableDependentsState="false"
        android:key="psycho_bass_enable"
        android:title="@string/psycho_bass_enable"
        android:icon="@drawable/ic_twotone_speaker_24dp"
        app:iconSpaceReserved="false">

        <!-- Crossover Frequency -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="psycho_bass_frequency"
            android:title="@string/psycho_bass_frequency"
            android:summary="@string/psycho_bass_frequency_summary"
            android:defaultValue="80"
            app:minValue="30"
            app:maxValue="150"
            app:unit=" Hz"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

        <!-- 2nd Harmonic Level -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="psycho_bass_harmonic2"
            android:title="@string/psycho_bass_harmonic2"
            android:summary="@string/psycho_bass_harmonic2_summary"
            android:defaultValue="50"
            app:minValue="0"
            app:maxValue="100"
            app:unit="%"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

        <!-- 3rd Harmonic Level -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="psycho_bass_harmonic3"
            android:title="@string/psycho_bass_harmonic3"
            android:summary="@string/psycho_bass_harmonic3_summary"
            android:defaultValue="30"
            app:minValue="0"
            app:maxValue="100"
            app:unit="%"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

        <!-- 4th Harmonic Level -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="psycho_bass_harmonic4"
            android:title="@string/psycho_bass_harmonic4"
            android:summary="@string/psycho_bass_harmonic4_summary"
            android:defaultValue="15"
            app:minValue="0"
            app:maxValue="100"
            app:unit="%"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

        <!-- Sub-bass Level -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="psycho_bass_sub"
            android:title="@string/psycho_bass_sub"
            android:summary="@string/psycho_bass_sub_summary"
            android:defaultValue="20"
            app:minValue="0"
            app:maxValue="100"
            app:unit="%"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

        <!-- Drive -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="psycho_bass_drive"
            android:title="@string/psycho_bass_drive"
            android:summary="@string/psycho_bass_drive_summary"
            android:defaultValue="30"
            app:minValue="0"
            app:maxValue="100"
            app:unit="%"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

        <!-- Mix -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="psycho_bass_mix"
            android:title="@string/psycho_bass_mix"
            android:defaultValue="50"
            app:minValue="0"
            app:maxValue="100"
            app:unit="%"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

    </me.timschneeberger.rootlessjamesdsp.preference.SwitchPreferenceGroup>
</PreferenceScreen>
