<?xml version="1.0" encoding="utf-8"?>
<!-- S24 ULTRA - EBU R128 Loudness Normalization Preferences -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <me.timschneeberger.rootlessjamesdsp.preference.SwitchPreferenceGroup
        android:disableDependentsState="false"
        android:key="loudness_enable"
        android:title="@string/loudness_enable"
        android:icon="@drawable/ic_twotone_volume_up_24dp"
        app:iconSpaceReserved="false">

        <!-- Target Loudness (LUFS) -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="loudness_target"
            android:title="@string/loudness_target"
            android:summary="@string/loudness_target_summary"
            android:defaultValue="-14"
            app:minValue="-24"
            app:maxValue="-8"
            app:unit=" LUFS"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

        <!-- True Peak Limit -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="loudness_true_peak"
            android:title="@string/loudness_true_peak"
            android:summary="@string/loudness_true_peak_summary"
            android:defaultValue="-1"
            app:minValue="-3"
            app:maxValue="0"
            app:unit=" dBTP"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

        <!-- Gain Smoothing -->
        <me.timschneeberger.rootlessjamesdsp.preference.MaterialSeekbarPreference
            android:key="loudness_smoothing"
            android:title="@string/loudness_smoothing"
            android:summary="@string/loudness_smoothing_summary"
            android:defaultValue="50"
            app:minValue="10"
            app:maxValue="100"
            app:unit="%"
            app:allowDividerAbove="false"
            app:updatesContinuously="true"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

    </me.timschneeberger.rootlessjamesdsp.preference.SwitchPreferenceGroup>
</PreferenceScreen>
